--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -11,19 +11,19 @@ tasks:
       /*!
        * Company Name http://www.company-website.com
        * <%= bundle.name %>.<%= fileExt %> <%= bundle.version %>
-       * <%= bundle[section-name].md5 %>
+       * <%= fileHash %>
        */
-    cssBuildDir: ./tests/sample-project/frontend-dev/pre-artifacts/css/
-    jsBuildDir: ./tests/sample-project/frontend-dev/pre-artifacts/js/
-    htmlBuildDir: ./tests/sample-project/frontend-dev/pre-artifacts/
+    cssBuildPath: ./frontend-dev/pre-artifacts/css/
+    jsBuildPath: ./frontend-dev/pre-artifacts/js/
+    htmlBuildPath: ./frontend-dev/pre-artifacts/
     useVersionNumInFileName: false
 
   minify:
     header: |
-      /*! Company Name http://www.company-website.com <%= bundle.name %>.js <%= bundle.version %> <%= bundle[section-name].md5 %> */
-    cssBuildDir: ./tests/sample-project/public/css/
-    jsBuildDir: ./tests/sample-project/public/js/
-    htmlBuildDir: ./tests/sample-project/public/
+      /*! Company Name http://www.company-website.com <%= bundle.name %>.<%= fileExt %> <%= bundle.version %> <%= fileHash %> */
+    cssBuildPath: ./public/css/
+    jsBuildPath: ./public/js/
+    htmlBuildPath: ./public/
     cssPreSuffix: ".min"
     htmlPreSuffix: ".min"
     jsPreSuffix: ".min"
