--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-yaml": "^3.2.3"
   },
   "devDependencies": {
-    "gulp-header": "^1.2.2"
+    "gulp-header": "^1.2.2",
+    "gulp-uglify": "^1.0.1"
   }
 }
