--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "gulp-header": "^1.2.2",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-minify-html": "^0.1.7",
     "gulp-uglify": "^1.0.1"
   }
 }
