--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -82,7 +82,7 @@ tasks:
     # Tasks to run on file changes ** Note ** only tasks that match changed file types will be run
     tasks:
       - build
-      - deploy
+#      - deploy
 
     # Flags that can be passed to the watch task ** Note ** These flags are available to tasks as they run via the `gulp` object
     flags:
