--- a/package.json
+++ b/package.json
@@ -6,17 +6,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "del": "^0.1.3",
-    "gulp": "^3.8.10",
-    "js-yaml": "^3.2.3"
-  },
-  "devDependencies": {
-    "gulp-header": "^1.2.2",
-    "gulp-if": "^1.2.5",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-minify-html": "^0.1.7",
-    "gulp-uglify": "^1.0.1"
-  }
+  "license": "ISC"
 }
