--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -34,7 +34,7 @@ tasks:
   deploy:
 
     # Files to be deployed (merged with bundle level definition;  e.g., bundleFile.deploy.files)
-    files: []
+    otherFiles: []
 
     # Global deploy artifacts flag (used if no `deployArtifact` field is found for a section in this config
     deployArtifacts:   true
@@ -42,34 +42,28 @@ tasks:
     # Should files be linted before deploy
     lintBeforeDeploy: false
 
-    allowedImageTypes: /\.(?:jpg|png|gif|tiff)$/i
-
-    allowedVideoTypes: /\.(?:flv|mpeg|mpg|mp3|mp4|ogg|vorbis)$/i
-
-#    allowedFontTypes: /\.(?:flv|mpeg|mpg|mp3|mp4|ogg|vorbis)$/i
-
-    hosts:
+    domainsToDevelop:
 
       # Hostname to develop for
       gulpw.elycruz.com:
 
         # Servers where user can develop for host key (in this case host key is `gulpw.elycruz.com`)
-        servers: # slots
+        devHostnames: # slots
           - devslot1.gulpw-sample.elycruz.com
           - devslot2.gulpw-sample.elycruz.com
           - devslot3.gulpw-sample.elycruz.com
 
         # all sites represent the same website just different instances of the website
-        sites: # instances
+        devHostnamePrefixes: # instances
           - web1
           - web2
           - web3
 
         # directories for deploying file types to the website instance chosen
-        paths: # dir
+        typesAndDeployPathsMap: # dir
           font: public/media/fonts/
           html: public/media/html/
           video: public/media/videos/
           image: public/media/images/
-          javascript: public/js/
-          stylesheet: public/css/
+          js: public/js/
+          css: public/css/
