Updated `bundle.wrangler.config.yaml` with `ignoredFiles` capability for jshint task.

--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -32,6 +32,13 @@ tasks:
         - handlebars
         - ejs
 
+  jshint:
+    ignoredFiles:
+      - jquery.js
+      - require.js
+      - require-text.js
+      - modernizr.js
+
   # Build Task
   build:
 
