--- a/bundle-configs/amd-require-js.yaml
+++ b/bundle-configs/amd-require-js.yaml
@@ -2,12 +2,24 @@ name: "amd-require-js" # Dash or underscore separated bundle name
 version: "0.0.0" # Semver version string
 description: "Example feature 1 bundle." # description goes here
 
+files:
+  js:
+    - ./fe-dev/bower_components/requirejs/require.js
+    - ./public/js/amd-require-js/init.js
+    - ./public/js/amd-require-js/modules/module1/module1.js
+  html:
+    - ./fe-dev/amd-require-js.html
+  css:
+    - ./fe-dev/css/global/normalize.css
+    - ./fe-dev/css/global/main.css
+
 requirejs:
-  appDir: ./fe-dev/js/src/amd-require-js
-  baseUrl: .
-  dir: ./public/js
-  modules:
-    -
-      name: modules/module1/module1
+  buildConfigPath: ./fe-dev/rjs-build-config.json
 
-
+deploy:
+  otherFiles:
+    js:
+      - ./fe-dev/bower_components/requirejs/require.js
+    relative:
+      - ./public/js/amd-require-js/modules/module1/module1.js
+      - ./public/js/amd-require-js/init.js
