Moved require js build config to yaml file and setup running requirejs as a node module (may not stay that way later).

--- a/rjs-output/js/src/rjs-output/rjs-build-config.json
+++ b/rjs-output/js/src/rjs-output/rjs-build-config.json
@@ -1,6 +1,6 @@
 {
   "appDir": "./",
-  "baseUrl": "./js/src/amd-require-js",
+  "baseUrl": "./js/src/amd",
   "dir": "./js/src/rjs-output",
   "deps": ["modernizr", "jquery"],
   "modules": [
