--- a/bundle-configs/amd.yaml
+++ b/bundle-configs/amd.yaml
@@ -1,4 +1,4 @@
-name: "amd" # Dash or underscore separated bundle name
+alias: "amd" # Dash or underscore separated bundle alias
 version: "0.0.0" # Semver version string
 description: "Example feature 1 bundle." # description goes here
 
