--- a/bundle-configs/example-feature-2.yaml
+++ b/bundle-configs/example-feature-2.yaml
@@ -1,4 +1,4 @@
-name: "example-feature-2" # Dash or underscore separated bundle name
+alias: "example-feature-2" # Dash or underscore separated bundle alias
 version: "0.0.0" # Semver version string
 description: "Example feature 2 bundle." # description goes here
 
