--- a/bundle-configs/example-page-1.yaml
+++ b/bundle-configs/example-page-1.yaml
@@ -1,4 +1,4 @@
-name: "example-page-1" # Dash or underscore separated bundle name
+alias: "example-page-1" # Dash or underscore separated bundle alias
 version: "0.0.0" # Semver version string
 description: "Example page bundle." # description goes here
 
