--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.10.6",
+    "nodemon": "^1.2.1"
+  },
   "devDependencies": {}
 }
