--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .idea
-node_modules
-bower_components
-**/bower_components
-.gulpw/**/*
 .gulpw
+**/node_modules
+**/bower_components
+**/.sass-cache
 npm-debug.log
