Added .jshintrc and started updating javascript sources to adhere to it's rules and added .jshintignore.

--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -37,6 +37,8 @@ tasks:
         - ejs
 
   jshint:
+    jshintrc: ./.jshintrc
+    overwriteDefault: true
     ignoredFiles:
       - jquery.js
       - require.js
@@ -89,3 +91,5 @@ tasks:
           js: public/js/
           css: public/css/
           md: public/
+  csslint:
+      csslintrc: ./fe-dev/.csslintrc
