--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -1,9 +1,5 @@
 bundlesPath: ./bundle-configs
 
-scriptRenderer: ejs
-
-bundleConfigFormat: yaml
-
 tasks:
 
   mocha:
@@ -69,18 +65,18 @@ tasks:
       gulpw.elycruz.com:
 
         # Servers where user can develop for host key (in this case host key is `gulpw.elycruz.com`)
-        devHostnames: # slots
+        hostnames: # slots
           - -devslot1.gulpw-sample.elycruz.com
           - -devslot2.gulpw-sample.elycruz.com
           - -devslot3.gulpw-sample.elycruz.com
 
         # all sites represent the same website just different instances of the website
-        devHostnamePrefixes: # instances
+        hostnamePrefixes: # instances
           - web1
           - web2
           - web3
 
-        deployRootFolder: sites/<%= devHostnamePrefix %><%= devHostname %> # web1-devslot1.gulpw-sample.elycruz.com/
+        deployRootFolder: sites/<%= hostnamePrefix %><%= hostname %> # web1-devslot1.gulpw-sample.elycruz.com/
 
         # directories for deploying file types to the website instance chosen
         typesAndDeployPathsMap: # dir
@@ -91,5 +87,6 @@ tasks:
           js: public/js/
           css: public/css/
           md: public/
+
   csslint:
       csslintrc: ./fe-dev/.csslintrc
