--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -1,5 +1,9 @@
 bundlesPath: ./bundle-configs
 
+scriptRenderer: ejs
+
+bundleConfigFormat: yaml
+
 tasks:
 
   mocha:
@@ -34,7 +38,6 @@ tasks:
 
   jshint:
     jshintrc: ./.jshintrc
-    overwriteDefault: true
     ignoredFiles:
       - jquery.js
       - require.js
@@ -48,42 +51,4 @@ tasks:
     lintBeforeBuild: true
 
   # Deploy Task
-  deploy:
-
-    # Files to be deployed (merged with bundle level definition;  e.g., bundleFile.deploy.files)
-    otherFiles: []
-
-    # Should files be linted before deploy
-    lintBeforeDeploy: false
-
-    domainsToDevelop:
-
-      # Hostname to develop for
-      gulpw.elycruz.com:
-
-        # Servers where user can develop for host key (in this case host key is `gulpw.elycruz.com`)
-        hostnames: # slots
-          - -devslot1.gulpw-sample.elycruz.com
-          - -devslot2.gulpw-sample.elycruz.com
-          - -devslot3.gulpw-sample.elycruz.com
-
-        # all sites represent the same website just different instances of the website
-        hostnamePrefixes: # instances
-          - web1
-          - web2
-          - web3
-
-        deployRootFolder: sites/<%= hostnamePrefix %><%= hostname %> # web1-devslot1.gulpw-sample.elycruz.com/
-
-        # directories for deploying file types to the website instance chosen
-        typesAndDeployPathsMap: # dir
-          font: public/media/fonts/
-          video: public/media/videos/
-          image: public/media/images/
-          html: public/
-          js: public/js/
-          css: public/css/
-          md: public/
-
-  csslint:
-      csslintrc: ./fe-dev/.csslintrc
+  deploy: ./bundle-wrangler-configs/deploy-config.yaml
