--- a/bundle.wrangler.config.yaml
+++ b/bundle.wrangler.config.yaml
@@ -8,26 +8,13 @@ tasks:
     testsDir:
     compile: true
 
-  concat:
-    header: |
-      /*!
-       * Company Name http://www.company-website.com
-       * <%= bundle.options.name %>.<%= fileExt %> <%= bundle.options.version %>
-       * <%= fileHash %>
-       */
-    cssBuildPath: ./public/css/
-    jsBuildPath: ./public/js/
-    htmlBuildPath: ./public/
-
   minify:
-    header: |
-      /*! Company Name http://www.company-website.com <%= bundle.options.name %>.<%= fileExt %> <%= bundle.options.version %> <%= fileHash %> */
     cssBuildPath: ./public/css/
     jsBuildPath: ./public/js/
     htmlBuildPath: ./public/
     template:
       templatePartial: |
-        App.setTemplate('<%= fileBasename %>', '<%= fileContent %>');
+        App.setTemplate('');
       compressWhitespace: true
       templateTypeKeys:
         - mustache
