--- a/gulpw-config.yaml
+++ b/gulpw-config.yaml
@@ -12,6 +12,7 @@ tasks:
     cssBuildPath: ./public/css/
     jsBuildPath: ./public/js/
     htmlBuildPath: ./public/
+    createFileHashes: false
     template:
       templatePartial: |
         App.setTemplate('<%= templateKey %>', '<%= templateContent %>');
