Moved compass config.rb to top level gulpw-config.*.

--- a/gulpw-config.yaml
+++ b/gulpw-config.yaml
@@ -4,6 +4,9 @@ bundleConfigFormat: yaml
 
 tasks:
 
+  compass:
+    configrb: ./fe-dev/config.rb
+
   mocha:
     testsDir: null
     compile: true
