Updated package.json file with a 'postinstall' command for installing bower dependencies in 'fe-dev' directory.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gulpw-sample-app",
-  "version": "0.1.70",
+  "version": "0.1.71",
   "main": "gulpfile.js",
   "scripts": {
+    "postinstall": "cd ./fe-dev && bower install --allow-root",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
